fixed a bug when each meeting would be added with a date one day too early; also added some simple CSS formatting for added meeting list readability

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,28 @@
+.h2 {
+    text-align: center;
+}
+
 .buffer {
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 .marker {
+    font-weight: bold;
     margin-top: 20px;
-    margin-bottom: 20px;
-    background: aqua;
+    background: #D7FF6E;
+    text-align: center;
+    padding: 30px;
+}
+
+.table-row:nth-child(odd) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #BEE2E5;
+}
+
+.table-row:nth-child(even) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #D4FBFF;
 }
